project/visa/test/assembler/error/label-without-instruction.asm
L1:
L2:
  nop
  jmp @L1
  jmp @L2
